--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8" />
-  <title>MY TITLE HERE</title>
+  <title>Starlight Carnival</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/my_styles.css" />
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
-
+<h1>Starlight Carnival</h1>
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
     My content.
   </p>
-
+  <a href="abou.html">About</a>
+  <a href="menu.html">Menu</a>
 </body>
 </html>
