--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>
     My content.
   </p>
-  <a href="aboutus.html">About</a>
+  <a href="aboutus.html">Aboutus</a>
   <a href="menu.html">Menu</a>
 </body>
 </html>
