--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>
     My content.
   </p>
-  <img src="./carnival-starry-night.jpg"/>
+  <img src="./carnival-starry-night.jpg" width="300px" height="300px"/>
   <a href="aboutus.html">Aboutus</a>
   <a href="menu.html">Menu</a>
 </body>
