--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <p>
     My content.
   </p>
-  <img src="./carnival-starry-night.jpg" width="300px" height="300px"/>
+<img src=http://images.fineartamerica.com/images-medium-large/carnival-ferris-wheel-against-starry-night-sky-heather-cate-photography.jpg
+<img src="./carnival-starry-night.jpg" width="300px" height="300px"/>
   <a href="aboutus.html">Aboutus</a>
   <a href="menu.html">Menu</a>
 </body>
