--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="aboutus.html">About us</a>
   <a href="menu.html">Menu</a>
   <p>
-    Great International Entertainment and Cunisine.
+    Great International Entertainment and Cuisine.
     The Best place for celebrating with family and friends.
   </p>
 <img src="./carnival-starry-night.jpg" width="300px" height="300px"/>
