--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,9 @@
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
+<h1>Menu</h1>
+<div>
+  <ol>Main Dishes</ol>
 
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
