--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,18 @@
 <h1>Menu</h1>
 <div>
   <ol>Main Dishes</ol>
+  <li>Ajiaco Cubano</li>
+<p>/<p>
+<li>Cuban Style Pork with Papaya Mango Salsa</li>
+<p></p>
+<li>Pernil Relleno de Moros y Christianos</li>
+<p></p>
+<li>Cubano (Sandwich)</li>
+<p></p>
+<li>Cuban Hamburger<li>
+<p></p>
+<li>Cuban Chicken Rice And Gumbo<li>
+<p></p>
 
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
