--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Menu</h1>
 <div>
-  <ol>Main Dishes</ol>
+  <ol><h2>Main Dishes</h2></ol>
   <li>Ajiaco Cubano</li>
 <p></p>
 <li>Cuban Style Pork with Papaya Mango Salsa</li>
