--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Menu</h1>
 <div>
+<ol><h2>Appetizers</h2></ol>
   <ol><h2>Main Dishes</h2></ol>
   <li>Ajiaco Cubano</li>
 <p></p>
@@ -22,6 +23,8 @@
 <p></p>
 <li>Cuban Chicken Rice And Gumbo<li>
 <p></p>
+<ol><h2>Desserts</h2></ol>
+<ol><h2>Drinks/h2></ol>
 
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
