--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,19 @@
 <h1>Menu</h1>
 <div>
 <ol><h2>Appetizers</h2></ol>
+<li>Spanish Onion Rings </li>
+<p></p>
+<li>Avocado And Pineapple Salad</li>
+<p></p>
+<li>Cuban Mango Bread</li>
+<p></p>
+<li>Grilled Pineapple</li>
+<p></p>
+<li>Frita Cubana</li>
+<p></p>
+</div>
+
+<div>
   <ol><h2>Main Dishes</h2></ol>
   <li>Ajiaco Cubano</li>
 <p></p>
@@ -23,8 +36,12 @@
 <p></p>
 <li>Cuban Chicken Rice And Gumbo<li>
 <p></p>
+<div>
 <ol><h2>Desserts</h2></ol>
-<ol><h2>Drinks/h2></ol>
+</div>
+<div>
+<ol><h2>Drinks</h2></ol>
+</div>
 
   <!--SUPER SIMPLE TEMPLATE-->
   <p>
