--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
 <p></p>
 <li>Cubano (Sandwich)</li>
 <p></p>
-<li>Cuban Hamburger<li>
+<li>Cuban Hamburger</li>
 <p></p>
 <li>Cuban Chicken Rice And Gumbo<li>
 <p></p>
