--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
 <p></p>
 <li>Cuban Hamburger</li>
 <p></p>
-<li>Cuban Chicken Rice And Gumbo<li>
+<li>Cuban Chicken Rice And Gumbo</li>
 <p></p>
 <div>
 <ol><h2>Desserts</h2></ol>
