--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Menu</h1>
+
 <div>
 <ol><h2>Appetizers</h2></ol>
 <li>Spanish Onion Rings </li>
@@ -36,17 +37,27 @@
 <p></p>
 <li>Cuban Chicken Rice And Gumbo</li>
 <p></p>
+
 <div>
 <ol><h2>Desserts</h2></ol>
-</div>
-<div>
-<ol><h2>Drinks</h2></ol>
+<li>Flan</li>
+<p>Crème Caramel Custard</p>
+<li>Rice Pudding </li>
+<p></p>
+<li> Pastelitos</li>
+<p>Little Pie Fruit Turnovers</p>
+<li> Tres Leches Cakes</li>
+<p></p>
 </div>
 
-  <!--SUPER SIMPLE TEMPLATE-->
-  <p>
-    My content.
-  </p>
+<div>
+<ol><h2>Drinks</h2></ol>
+<li>Pepsi Beverages </li>
+<p></p>
+<li> Shakes</li>
+<p></p>
+
+</div>
 
 </body>
 </html>
