--- a/menu.html
+++ b/menu.html
@@ -37,6 +37,12 @@
 <p></p>
 <li>Cuban Chicken Rice And Gumbo</li>
 <p></p>
+</div>
+
+<div>
+<ol><h2>Sides</h2></ol>
+
+</div>
 
 <div>
 <ol><h2>Desserts</h2></ol>
