--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,12 @@
 
 <div>
 <ol><h2>Sides</h2></ol>
-
+<li>Fried Sweet Plantains</li>
+<p></p>
+<li>Yuca Fingers</li>
+<p></p>
+<li>Grilled Pineapples</li>
+<p></p>
 </div>
 
 <div>
