--- a/aboutus.html
+++ b/aboutus.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <h1>Starlight Carnival</h1>
-  <!--SUPER SIMPLE TEMPLATE-->
-  <p>
-    My content.
-  </p>
+  <h2 >About us</h2>
+
+<p>Starlight Carnival is a newly fusion of Cuban and American cuisine which celebrates submerge of culture.  Rosie García and her family are our restaurant founders and our establishment was founded in 2008. Rosie always had a taste for adventure especially for food since she was young.  She enjoys exploring more international combinations of cuisine on her trips around the world.   Rosie receive her degree in culinary arts at a famous New York College International Culinary Center and been on few food competitions.  Lastly, the atmosphere at Starlight Carnival is always bright, fun place to enjoy cozy table conversation.
+
+</p>
 
 </body>
 </html>
