--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--SUPER SIMPLE TEMPLATE-->
   <a href="aboutus.html">About us</a>
   <a href="menu.html">Menu</a>
-  <p>
+  <p style="color:blue,text-align:left">
     Great International Entertainment and Cuisine.
     The Best place for celebrating with family and friends.
   </p>
