--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,10 @@
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
-<h1>Menu</h1>
+<h1 style="text-algin: center"Menu></h1>
 
 <div>
-<ol><h2>Appetizers</h2></ol>
+<ol><h2 style="text-algin: center"Appetizers></h2></ol>
 <li>Spanish Onion Rings </li>
 <p></p>
 <li>Avocado And Pineapple Salad</li>
@@ -24,7 +24,7 @@
 </div>
 
 <div>
-  <ol><h2>Main Dishes</h2></ol>
+  <ol><h2 style="text-algin: center"Main Dishes></h2></ol>
   <li>Ajiaco Cubano</li>
 <p></p>
 <li>Cuban Style Pork with Papaya Mango Salsa</li>
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-<ol><h2>Sides</h2></ol>
+<ol><h2style="text-algin: center"Sides></h2></ol>
 <li>Fried Sweet Plantains</li>
 <p></p>
 <li>Yuca Fingers</li>
@@ -50,7 +50,7 @@
 </div>
 
 <div>
-<ol><h2>Desserts</h2></ol>
+<ol><h2style="text-algin: center"Desserts></h2></ol>
 <li>Flan</li>
 <p>Crème Caramel Custard</p>
 <li>Rice Pudding </li>
@@ -62,7 +62,7 @@
 </div>
 
 <div>
-<ol><h2>Drinks</h2></ol>
+<ol><h2style="text-algin: center"Drinks></h2></ol>
 <li>Pepsi Beverages </li>
 <p></p>
 <li> Shakes</li>
