--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
-<h1 style="font-family: Times,curvise;"Starlight Carnival></h1>
+<h1 style="font-family: Times,curvise;">Starlight Carnival</h1>
   <!--SUPER SIMPLE TEMPLATE-->
   <a href="aboutus.html">About us</a>
   <a href="menu.html">Menu</a>
