--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,11 @@
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
-<h1 style="text-algin: center"Menu></h1>
+<h1 style="font-family: Times,curvise;">Starlight Carnival</h1>
+<h2 style="text-algin: center"Menu></h2>
 
 <div>
-<ol><h2 style="text-algin: center"Appetizers></h2></ol>
+<ol><h3 style="text-algin: center"Appetizers></h3></ol>
 <li>Spanish Onion Rings </li>
 <p></p>
 <li>Avocado And Pineapple Salad</li>
@@ -24,7 +25,7 @@
 </div>
 
 <div>
-  <ol><h2 style="text-algin: center"Main Dishes></h2></ol>
+  <ol><h3 style="text-algin: center"Main Dishes></h3></ol>
   <li>Ajiaco Cubano</li>
 <p></p>
 <li>Cuban Style Pork with Papaya Mango Salsa</li>
@@ -40,7 +41,7 @@
 </div>
 
 <div>
-<ol><h2style="text-algin: center"Sides></h2></ol>
+<ol><h3 style="text-algin: center"Sides></h3></ol>
 <li>Fried Sweet Plantains</li>
 <p></p>
 <li>Yuca Fingers</li>
@@ -50,7 +51,7 @@
 </div>
 
 <div>
-<ol><h2style="text-algin: center"Desserts></h2></ol>
+<ol><h3 style="text-algin: center"Desserts></h3></ol>
 <li>Flan</li>
 <p>Crème Caramel Custard</p>
 <li>Rice Pudding </li>
@@ -62,7 +63,7 @@
 </div>
 
 <div>
-<ol><h2style="text-algin: center"Drinks></h2></ol>
+<ol><h3 style="text-algin: center"Drinks></h3></ol>
 <li>Pepsi Beverages </li>
 <p></p>
 <li> Shakes</li>
