--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1 style="font-family: Times,curvise;">Starlight Carnival</h1>
-<h2 style="text-algin: center"Menu></h2>
+<h2 style="text-algin: center">Menu></h2>
 
 <div>
 <ol><h3 style="text-algin: center"Appetizers></h3></ol>
