--- a/menu.html
+++ b/menu.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <h1 style="font-family: Times,curvise;">Starlight Carnival</h1>
-<h2 style="text-algin: center">Menu></h2>
+<h2 style="text-algin: center">Menu</h2>
 
 <div>
-<ol><h3 style="text-algin: center"Appetizers></h3></ol>
+<ol><h3 style="text-algin: center">Appetizers</h3></ol>
 <li>Spanish Onion Rings </li>
 <p></p>
 <li>Avocado And Pineapple Salad</li>
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-  <ol><h3 style="text-algin: center"Main Dishes></h3></ol>
+  <ol><h3 style="text-algin: center">Main Dishes</h3></ol>
   <li>Ajiaco Cubano</li>
 <p></p>
 <li>Cuban Style Pork with Papaya Mango Salsa</li>
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-<ol><h3 style="text-algin: center"Sides></h3></ol>
+<ol><h3 style="text-algin: center">Sides</h3></ol>
 <li>Fried Sweet Plantains</li>
 <p></p>
 <li>Yuca Fingers</li>
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-<ol><h3 style="text-algin: center"Desserts></h3></ol>
+<ol><h3 style="text-algin: center">Desserts</h3></ol>
 <li>Flan</li>
 <p>Crème Caramel Custard</p>
 <li>Rice Pudding </li>
