--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
 </div>
 
 <div>
-<ol><h3 style="text-algin: center"Drinks></h3></ol>
+<ol><h3 style="text-algin: center">Drinks</h3></ol>
 <li>Pepsi Beverages </li>
 <p></p>
 <li> Shakes</li>
