--- a/menu.html
+++ b/menu.html
@@ -12,61 +12,61 @@
 
 <div>
 <ol><h3 style="text-align: center">Appetizers</h3></ol>
-<li>Spanish Onion Rings </li>
-<p></p>
-<li>Avocado And Pineapple Salad</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
-<p></p>
-<li>Cuban Mango Bread</li>
-<p></p>
-<li>Grilled Pineapple</li>
-<p></p>
-<li>Frita Cubana</li>
-<p></p>
+<li style="text-align: center">Spanish Onion Rings </li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Avocado And Pineapple Salad</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<p style="text-align: center"></p>
+<li style="text-align: center">Cuban Mango Bread</li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Grilled Pineapple</li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Frita Cubana</li>
+<p style="text-align: center"></p>
 </div>
 
 <div>
   <ol><h3 style="text-align: center">Main Dishes</h3></ol>
-  <li>Ajiaco Cubano</li>
-<p></p>
-<li>Cuban Style Pork with Papaya Mango Salsa</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
-<p></p>
-<li>Pernil Relleno de Moros y Christianos</li>
-<p></p>
-<li>Cubano (Sandwich)</li>
-<p></p>
-<li>Cuban Hamburger</li>
-<p></p>
-<li>Cuban Chicken Rice And Gumbo</li>
-<p></p>
+  <li style="text-align: center">Ajiaco Cubano</li>
+<pstyle="text-align: center"></p>
+<li style="text-align: center">Cuban Style Pork with Papaya Mango Salsa</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<p style="text-align: center"></p>
+<li style="text-align: center">Pernil Relleno de Moros y Christianos</li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Cubano (Sandwich)</li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Cuban Hamburger</li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Cuban Chicken Rice And Gumbo</li>
+<p style="text-align: center"></p>
 </div>
 
 <div>
 <ol><h3 style="text-align: center">Sides</h3></ol>
-<li>Fried Sweet Plantains</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
-<p></p>
-<li>Yuca Fingers</li>
-<p></p>
-<li>Grilled Pineapples</li>
-<p></p>
+<li style="text-align: center">Fried Sweet Plantains</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<p style="text-align: center"></p>
+<li style="text-align: center">Yuca Fingers</li>
+<p style="text-align: center"></p>
+<li style="text-align: center">Grilled Pineapples</li>
+<p style="text-align: center"></p>
 </div>
 
 <div>
 <ol><h3 style="text-align: center">Desserts</h3></ol>
-<li>Flan</li>
-<p>Crème Caramel Custard</p>
-<li>Rice Pudding </li>
-<p></p>
-<li> Pastelitos</li>
-<p>Little Pie Fruit Turnovers</p>
-<li> Tres Leches Cakes</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<li style="text-align: center">Flan</li>
+<p style="text-align: center">Crème Caramel Custard</p>
+<li style="text-align: center">Rice Pudding </li>
+<p style="text-align: center"></p>
+<li style="text-align: center"> Pastelitos</li>
+<p style="text-align: center">Little Pie Fruit Turnovers</p>
+<li style="text-align: center"> Tres Leches Cakes</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
 <p></p>
 </div>
 
 <div>
 <ol><h3 style="text-align: center">Drinks</h3></ol>
-<li>Pepsi Beverages </li>
+<li style="text-align: center">Pepsi Beverages </li>
 <p></p>
-<li> Shakes</li>
+<li style="text-align: center"> Shakes</li>
 <p></p>
 
 </div>
