--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
 <ol><h3 style="text-align: center">Appetizers</h3></ol>
 <li style="text-align: center">Spanish Onion Rings </li>
 <p style="text-align: center"></p>
-<li style="text-align: center">Avocado And Pineapple Salad</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<li style="text-align: center">Avocado And Pineapple Salad</li><img src="./Avocado And Pineapple Salad.jpg" width="100px" height="100px"/>
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Mango Bread</li>
 <p style="text-align: center"></p>
