--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
   <ol><h3 style="text-align: center">Main Dishes</h3></ol>
   <li style="text-align: center">Ajiaco Cubano</li>
 <pstyle="text-align: center"></p>
-<li style="text-align: center">Cuban Style Pork with Papaya Mango Salsa</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<li style="text-align: center">Cuban Style Pork with Papaya Mango Salsa</li><img src="./Pork_Papaya_Mango_Salsa.jpg" width="200px" height="100px"/>
 <p style="text-align: center"></p>
 <li style="text-align: center">Pernil Relleno de Moros y Christianos</li>
 <p style="text-align: center"></p>
