--- a/menu.html
+++ b/menu.html
@@ -58,7 +58,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center"> Pastelitos</li>
 <p style="text-align: center">Little Pie Fruit Turnovers</p>
-<li style="text-align: center"> Tres Leches Cakes</li><img src="./carnival-starry-night.jpg" width="200px" height="100px"/>
+<li style="text-align: center"> Tres Leches Cake</li><img src="./tres-leches-cake.jpg" width="200px" height="100px"/>
 <p></p>
 </div>
 
