--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,8 @@
   <ol><h3 style="text-align: center">Main Dishes</h3></ol>
   <li style="text-align: center">Ajiaco Cubano</li>
 <p style="text-align: center"></p>
-<li style="text-align: center">Cuban Style Pork with Papaya Mango Salsa</li><img src="./Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/>
+<li style="text-align: center">Cuban Style Pork with Papaya Mango Salsa</li>
+<img src="./Pork_Papaya_Mango_Salsa.jpg, align: right" width="150px" height="250px"/>
 <p style="text-align: center"></p>
 <li style="text-align: center">Pernil Relleno de Moros y Christianos</li>
 <p style="text-align: center"></p>
