--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
 <ol><h3 style="text-align: center">Appetizers</h3></ol>
 <li style="text-align: center">Spanish Onion Rings </li>
 <p style="text-align: center"></p>
-<li style="text-align: center">Avocado And Pineapple Salad</li><img src="./Avocado And Pineapple Salad.jpg" width="150px" height="250px"/>
+<li style="text-align: center">Avocado And Pineapple Salad</li>
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Mango Bread</li>
 <p style="text-align: center"></p>
@@ -22,6 +22,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Frita Cubana</li>
 <p style="text-align: center"></p>
+<img src="./Avocado And Pineapple Salad.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
@@ -29,8 +30,6 @@
   <li style="text-align: center">Ajiaco Cubano</li>
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Style Pork with Papaya Mango Salsa</li>
-<span> <img src="./Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px" "align: right"/>
-</span>
 <p style="text-align: center"></p>
 <li style="text-align: center">Pernil Relleno de Moros y Christianos</li>
 <p style="text-align: center"></p>
@@ -40,16 +39,18 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Chicken Rice And Gumbo</li>
 <p style="text-align: center"></p>
+<img src="./Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
 <ol><h3 style="text-align: center">Sides</h3></ol>
-<li style="text-align: center">Fried Sweet Plantains</li><img src="./Fried_Plantains.jpg" width="150px" height="250px"/>
+<li style="text-align: center">Fried Sweet Plantains</li>
 <p style="text-align: center"></p>
 <li style="text-align: center">Yuca Fingers</li>
 <p style="text-align: center"></p>
 <li style="text-align: center">Grilled Pineapples</li>
 <p style="text-align: center"></p>
+<img src="./Fried_Plantains.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
@@ -60,8 +61,8 @@
 <p style="text-align: center"></p>
 <li style="text-align: center"> Pastelitos</li>
 <p style="text-align: center">Little Pie Fruit Turnovers</p>
-<li style="text-align: center"> Tres Leches Cake</li><img src="./tres-leches-cake.jpg" width="150px" height="250px"/>
-<p></p>
+<li style="text-align: center"> Tres Leches Cake</li>
+<img src="./tres-leches-cake.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
