--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     The Best place for celebrating with family and friends.
   </p>
 <img src="./carnival-starry-night.jpg" width="300px" height="300px"/>
-<body bgcolor= #f78e1e;>
+<body bgcolor= "#f78e1e">
 
 </body>
 </html>
