--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <h1 style="font-family: Times,curvise;">Starlight Carnival</h1>
+<a href="index.html">Home</a>
+<a href="aboutus.html">About us</a>
 <h2 style="text-align: center">Menu</h2>
 
 <div>
