--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 
 </p>
 <img src="./Rosie_SC.jpg" width="250px" height="300px"/>
-<img src="./Star-ex" position=right width="250px" height="300px"/>
+<img src="./StarC.jpg" position=right width="250px" height="300px"/>
 <body bgcolor= "#FF9FAD">
 </body>
 </html>
