--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     The Best place for celebrating with family and friends.
   </p>
 <img src="./carnival-starry-night.jpg" width="600px" height="300px"/>
-<img src="./StarC.jpg" width="600px" height="300px"/>
+<img src="./Star-ex.jpg" width="600px" height="300px"/>
 <body bgcolor= "#CAFFE6">
 
 </body>
