--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
   <script src="js/my_javascript.js"></script>
 </head>
 <body>
+<body bgcolor= "#DDEEFF">
 <h1 style="font-family: Times,curvise;">Starlight Carnival</h1>
 <a href="index.html">Home</a>
 <a href="aboutus.html">About us</a>
