--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Chicken Rice And Gumbo</li>
 <p style="text-align: center"></p>
-<img src="./Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/>
+<span><img src="./Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/></span>
 </div>
 
 <div>
