--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     Great International Entertainment and Cuisine.
     The Best place for celebrating with family and friends.
   </p>
-<img src="./carnival-starry-night.jpg" width="600px" height="300px"/>
-<img src="./Star-ex.jpg" width="600px" height="300px"/>
+<img src="./carnival-starry-night.jpg" width="300px" height="300px"/>
+<img src="./Star-ex.jpg" width="300px" height="300px" position="bottom-left"/>
 <body bgcolor= "#CAFFE6">
 
 </body>
