fix coding for images

--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Frita Cubana</li>
 <p style="text-align: center"></p>
-<img src="./Avocado And Pineapple Salad.jpg" width="150px" height="250px"/>
+<img src="./images/Avocado And Pineapple Salad.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
@@ -42,7 +42,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Chicken Rice And Gumbo</li>
 <p style="text-align: center"></p>
-<img src="./Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/>
+<img src="./images/Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
@@ -53,7 +53,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Grilled Pineapples</li>
 <p style="text-align: center"></p>
-<img src="./Fried_Plantains.jpg" width="150px" height="250px"/>
+<img src="./images/Fried_Plantains.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
@@ -65,7 +65,7 @@
 <li style="text-align: center">Pastelitos</li>
 <p style="text-align: center">Little Pie Fruit Turnovers</p>
 <li style="text-align: center">Tres Leches Cake</li>
-<img src="./tres-leches-cake.jpg" width="150px" height="250px"/>
+<img src="./images/images/tres-leches-cake.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
