--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Great International Entertainment and Cuisine.
     The Best place for celebrating with family and friends.
   </p>
-<img src="./images/carnival-starry-night.jpg" width="300px" height="300px"/>
+<img src="./images/carnival-night.jpg" width="300px" height="300px"/>
 <img src="./images/Star-ex.jpg" width="300px" height="300px" position="bottom-left"/>
 <body bgcolor= "#CAFFE6">
 
