--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Cuban Chicken Rice And Gumbo</li>
 <p style="text-align: center"></p>
-<img src="./images/Pork_Papaya_Mango_Salsa.jpg" width="150px" height="250px"/>
+<img src="./images/Pork_Papaya_Salsa.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
@@ -53,7 +53,7 @@
 <p style="text-align: center"></p>
 <li style="text-align: center">Grilled Pineapples</li>
 <p style="text-align: center"></p>
-<img src="./images/Fried_Plantains.jpg" width="150px" height="250px"/>
+<img src="./images/Plantains.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
