fixed coding error

--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
 <li style="text-align: center">Pastelitos</li>
 <p style="text-align: center">Little Pie Fruit Turnovers</p>
 <li style="text-align: center">Tres Leches Cake</li>
-<img src="./tres-cake.jpg" width="150px" height="250px"/>
+<img src="./images/tres-cake.jpg" width="150px" height="250px"/>
 </div>
 
 <div>
